# EmShowerSim_PINN

./: .dockerignore  .gitignore  Dockerfile  Inspector.py  PINN.ipynb  README.md
EMShowerSim/: CMakeLists.txt  EMShower.cc  run.mac
EMShowerSim/include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh
EMShowerSim/src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc
